--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title>VTM Storyteller Tool</title>
 	</head>
-	<body>
-		<div id="root"></div>
+	<body ng-app="app" ng-controller="AppController as app" ng-cloak>
+
 	</body>
+	<script src="/app.js" type="text/javascript"></script>
 </html>
