update angularjs with ui-router and add in initial configs

--- a/views/index.html
+++ b/views/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<title>VTM Storyteller Tool</title>
 	</head>
-	<body ng-app="app" ng-controller="AppController as app" ng-cloak>
-
+	<body ng-app="app" ng-cloak>
+		<ui-view></ui-view>
 	</body>
 	<script src="/app.js" type="text/javascript"></script>
 </html>
