--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -5,17 +5,21 @@
 	letter-spacing: $letter-spacing-default;
 }
 
-@mixin realShadow($color: $primary, $inset: false) {
+@mixin realShadow($color: $primary, $inset: false, $mult: 1) {
+	$size: (4px * $mult);
+	$size2: (5px * $mult);
+	$size3: (3px * $mult);
+
 	@if $inset {
 		box-shadow:
-		inset 4px 8px 6px -4px fade-out(darken($color, 20%), .9),
-		inset 4px 4px 12px 5px fade-out(desaturate($color, 60%), .8);
+		inset $size (($size * 2) * -1) ($size * 1.5) ($size * -1) fade-out(darken($color, 20%), .95),
+		inset $size $size ($size * 3) $size2 fade-out(desaturate($color, 60%), .9);
 	} @else {
 		box-shadow:
-		0 8px 6px -4px fade-out(darken($color, 20%), .9),
+		0 (($size * 2) * -1) ($size * 1.5) ($size * -1) fade-out(darken($color, 20%), .9),
 
-		0 25px 20px -20px rgba(0,0,0,0.1),
-		0 10px 10px -3px fade-out(desaturate($color, 60%), .8);
+		0 ($size2 * 5) ($size2 * 4) (($size2 * 4) * -1) rgba(0,0,0,0.1),
+		0 ($size2 * 2) ($size2 * 2) ($size3 * -1) fade-out(desaturate($color, 60%), .8);
 	}
 }
 
