--- a/scss/core.scss
+++ b/scss/core.scss
@@ -2,7 +2,7 @@
 html {
 	display: flex;
 	// overflow: hidden;
-	height: 100%;
+	min-height: 100%;
 	flex-direction: column;
 }
 
@@ -10,7 +10,7 @@ body {
 	background-color: $grey-lightest;
 	color: $grey-darker;
 	margin: 0;
-	height: 100%;
+	min-height: 100%;
 
 	@include applyFontStandards();
 
@@ -22,5 +22,5 @@ body {
 }
 
 #__nuxt, #__layout {
-  height: 100%;
+  min-height: 100%;
 }
