--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -222,6 +222,48 @@
 	background-blend-mode: multiply;
 }
 
+@mixin radiant-gradient($color, $direction: 'right') {
+	@include gradient(adjust-hue($color, -10deg), adjust-hue($color, 10deg), $direction);
+}
+
+@mixin gradient($colour1, $colour2, $direction: 'right') {
+	$gradientType: false;
+	$webkitMoz: false;
+	$to: false;
+	@if $direction == 'right' {
+		$webkitMoz: 'left';
+		$to: 'to right';
+		$gradientType: 1;
+	} @else if $direction == 'left' {
+		//Swap colours
+		$tempColour: $colour1;
+		$colour1: $colour2;
+		$colour2: $tempColour;
+
+		$to: 'to right';
+		$webkitMoz: 'left';
+		$gradientType: 1;
+	} @else if $direction == 'up' {
+		//Swap colours
+		$tempColour: $colour1;
+		$colour1: $colour2;
+
+		$to: 'to bottom';
+		$webkitMoz: 'top';
+		$gradientType: 0;
+	} @else if $direction == 'down' {
+		$to: 'to bottom';
+		$webkitMoz: 'top';
+		$gradientType: 0;
+	}
+
+	background: $colour1;
+	background: -moz-linear-gradient(#{$webkitMoz},  $colour1 0%, $colour2 100%);
+	background: -webkit-linear-gradient(#{$webkitMoz},  $colour1 0%,$colour2 100%);
+	background: linear-gradient(#{$to},  $colour1 0%,$colour2 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#{$colour1}', endColorstr='#{$colour2}',GradientType='#{$gradientType}' );
+}
+
 @mixin generateStateModifiers() {
 	@for $i from 1 through length($state-modifiers) {
 		$state-mod: nth($state-modifiers, $i);
