--- a/scss/core.scss
+++ b/scss/core.scss
@@ -10,7 +10,7 @@ body {
 	background-color: $grey-lightest;
 	color: $grey-darker;
 	margin: 0;
-	min-height: 100%;
+	min-height: 100vmin;
 
 	@include applyFontStandards();
 
@@ -22,5 +22,5 @@ body {
 }
 
 #__nuxt, #__layout {
-  min-height: 100%;
+  min-height: 100vmin;
 }
