Add better shadows to tabs and spacing between dice rolls

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -61,5 +61,6 @@ $state-modifiers: (
 	success: $success,
 	warning: $warning,
 	danger: $danger,
-	error: $danger
+	error: $danger,
+	special: $special
 );
