Allow buff 1 dot past max

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,6 +23,7 @@ $warning: #DDA158;
 $success: #9DB260;
 $special: #2E86AB;
 $special-light: lighten($special, 25%);
+$special-alt: #FFC64A;
 
 $bg: $grey-darkest;
 
