Fix annoyances with multiselect

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -32,6 +32,7 @@ $gap: 16px;
 $font-size-default: 16px;
 $font-family-default: 'Nunito', sans-serif;
 $letter-spacing-default: .05em;
+$font-size-sm: 0.8em;
 
 $global-border-radius: 10px;
 
