--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -23,7 +23,7 @@ $warning: #DDA158;
 $success: #9DB260;
 $special: #2E86AB;
 $special-light: lighten($special, 25%);
-$special-alt: #FFC64A;
+$special-alt: #FFCC80;
 
 $bg: $grey-darkest;
 
